# mjlab-robotics

./: README.md  pyproject.toml
src/anymal_c_velocity/anymal_c/xmls/: anymal_c.xml
src/tron_pro_velocity/: __init__.py  env_cfgs.py  rl_cfg.py
src/tron_pro_velocity/tron_pro/: tron_pro_constants.py
src/tron_pro_velocity/tron_pro/xmls/: tron_pro.xml
wandb/run-20260424_165630-fy4j6sii/: run-fy4j6sii.wandb
wandb/run-20260424_165630-fy4j6sii/files/: 2026-04-24_16-53-53.onnx  config.yaml  mjlab-robotics.diff  requirements.txt  wandb-metadata.json  wandb-summary.json
