[project]
name = "tron-pro-velocity"
version = "0.1.0"
description = "An example of how to use a custom robot with an existing task in mjlab"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab>=1.1.0",
    "torch; platform_system == 'Windows'",
    "torchvision; platform_system == 'Windows'",
    "torchaudio; platform_system == 'Windows'",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
indent-width = 2
src = ["tron_pro_velocity"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
tron_pro_velocity = "tron_pro_velocity"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
